# serializer version: 1
# name: TestBuildCompileFixPrompt.test_includes_code_and_error
  '''
  You are an expert Python programmer. A Knowledge Base Program failed to compile or run.
  Fix the error and output your fix as a patch.
  
  You are designing a Knowledge Base Program that implements three classes:
  
  1. **KnowledgeItem** (dataclass): Defines what information is captured as knowledge items when writing to the knowledge base.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
     - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
     - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
  
  2. **Query** (dataclass): Defines what parameters are used when reading from the knowledge base.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - Same JSON-compatible type restriction and field description support as KnowledgeItem
  
  3. **KnowledgeBase** (class): The core knowledge base system.
     - `__init__(self, toolkit)`: Receives a Toolkit with:
       - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
       - `toolkit.chroma`: chromadb ephemeral client
       - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
       - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
     - `write(self, item: KnowledgeItem) -> None`: Store information
     - `read(self, query: Query) -> str`: Retrieve relevant information as a string
  
  Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
  
  ## Runtime Constraints
  
  These limits are enforced during evaluation. Violating them results in score = 0.
  
  - **`read()` output limit**: `kb.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
  - **`write()` / `read()` timeout**: Each call must complete within **5 seconds**. Avoid expensive computation in these methods.
  - **`toolkit.llm_completion()` budget**: At most **50 LLM calls** per evaluation run. Use LLM calls sparingly in write/read; prefer deterministic retrieval (SQL, text matching) over LLM-based filtering.
  
  ## Instruction Constants (required)
  
  Four module-level string constants provide the natural-language instructions used in task agent prompts:
  
  - INSTRUCTION_KNOWLEDGE_ITEM: Instruction for knowledge item generation. Tells the task LLM what to extract and how to structure it. The KnowledgeItem schema is provided separately — no need to describe field names or types here.
  - INSTRUCTION_QUERY: Instruction for query generation. Tells the task LLM how to formulate retrieval queries. The Query schema is provided separately — no need to describe field names or types here.
  - INSTRUCTION_RESPONSE: Instruction for answer generation. Controls answer format, length, and style.
  - ALWAYS_ON_KNOWLEDGE: Persistent knowledge injected into every task agent prompt. Unlike INSTRUCTION_* (output format), this provides always-on context. Can be empty.
  
  INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, and INSTRUCTION_RESPONSE must not be empty. ALWAYS_ON_KNOWLEDGE can be empty.
  
  
  Rules:
  1. Output ONLY the fix as a patch. No explanation needed.
  2. The code must define exactly three classes (KnowledgeItem, Query, KnowledgeBase) and four module-level string constants (INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, INSTRUCTION_RESPONSE, ALWAYS_ON_KNOWLEDGE).
  3. Only use allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb.
  4. Make minimal changes — fix ONLY the broken line(s). Do NOT add new fields, imports, or restructure the code.
  
  Output your changes as a V4A patch. The patch is applied to the current program shown in <current_program>.
  
  Format:
  ```
  *** Begin Patch
  *** Update File: program.py
  @@ <optional context hint>
   context line (1-2 lines before change)
  -removed line
  +added line
   context line (1-2 lines after change)
  *** End Patch
  ```
  
  Rules:
  - Lines prefixed with `-` are removed, `+` are added, ` ` (space) are unchanged context.
  - Include 1-2 context lines before and after each change for anchoring.
  - Multiple hunks are allowed within one `*** Update File` block.
  
  Example — replacing a return value:
  ```
  *** Begin Patch
  *** Update File: program.py
  @@ return statement
   def read(self, query: Query) -> str:
  -    return "\n".join(self.store)
  +    return "\n".join(self.store[-5:])
  *** End Patch
  ```
  
  ## Broken Code
  
  ```python
  class KnowledgeBase: pass
  ```
  
  ## Error
  
  **Syntax error**: unexpected indent at line 5
  
  Fix the error and output your fix as a patch.
  '''
# ---
# name: TestBuildCompileFixPrompt.test_includes_error_type_label
  '''
  You are an expert Python programmer. A Knowledge Base Program failed to compile or run.
  Fix the error and output your fix as a patch.
  
  You are designing a Knowledge Base Program that implements three classes:
  
  1. **KnowledgeItem** (dataclass): Defines what information is captured as knowledge items when writing to the knowledge base.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
     - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
     - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
  
  2. **Query** (dataclass): Defines what parameters are used when reading from the knowledge base.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - Same JSON-compatible type restriction and field description support as KnowledgeItem
  
  3. **KnowledgeBase** (class): The core knowledge base system.
     - `__init__(self, toolkit)`: Receives a Toolkit with:
       - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
       - `toolkit.chroma`: chromadb ephemeral client
       - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
       - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
     - `write(self, item: KnowledgeItem) -> None`: Store information
     - `read(self, query: Query) -> str`: Retrieve relevant information as a string
  
  Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
  
  ## Runtime Constraints
  
  These limits are enforced during evaluation. Violating them results in score = 0.
  
  - **`read()` output limit**: `kb.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
  - **`write()` / `read()` timeout**: Each call must complete within **5 seconds**. Avoid expensive computation in these methods.
  - **`toolkit.llm_completion()` budget**: At most **50 LLM calls** per evaluation run. Use LLM calls sparingly in write/read; prefer deterministic retrieval (SQL, text matching) over LLM-based filtering.
  
  ## Instruction Constants (required)
  
  Four module-level string constants provide the natural-language instructions used in task agent prompts:
  
  - INSTRUCTION_KNOWLEDGE_ITEM: Instruction for knowledge item generation. Tells the task LLM what to extract and how to structure it. The KnowledgeItem schema is provided separately — no need to describe field names or types here.
  - INSTRUCTION_QUERY: Instruction for query generation. Tells the task LLM how to formulate retrieval queries. The Query schema is provided separately — no need to describe field names or types here.
  - INSTRUCTION_RESPONSE: Instruction for answer generation. Controls answer format, length, and style.
  - ALWAYS_ON_KNOWLEDGE: Persistent knowledge injected into every task agent prompt. Unlike INSTRUCTION_* (output format), this provides always-on context. Can be empty.
  
  INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, and INSTRUCTION_RESPONSE must not be empty. ALWAYS_ON_KNOWLEDGE can be empty.
  
  
  Rules:
  1. Output ONLY the fix as a patch. No explanation needed.
  2. The code must define exactly three classes (KnowledgeItem, Query, KnowledgeBase) and four module-level string constants (INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, INSTRUCTION_RESPONSE, ALWAYS_ON_KNOWLEDGE).
  3. Only use allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb.
  4. Make minimal changes — fix ONLY the broken line(s). Do NOT add new fields, imports, or restructure the code.
  
  Output your changes as a V4A patch. The patch is applied to the current program shown in <current_program>.
  
  Format:
  ```
  *** Begin Patch
  *** Update File: program.py
  @@ <optional context hint>
   context line (1-2 lines before change)
  -removed line
  +added line
   context line (1-2 lines after change)
  *** End Patch
  ```
  
  Rules:
  - Lines prefixed with `-` are removed, `+` are added, ` ` (space) are unchanged context.
  - Include 1-2 context lines before and after each change for anchoring.
  - Multiple hunks are allowed within one `*** Update File` block.
  
  Example — replacing a return value:
  ```
  *** Begin Patch
  *** Update File: program.py
  @@ return statement
   def read(self, query: Query) -> str:
  -    return "\n".join(self.store)
  +    return "\n".join(self.store[-5:])
  *** End Patch
  ```
  
  ## Broken Code
  
  ```python
  x
  ```
  
  ## Error
  
  **Import whitelist violation**: Disallowed import: numpy
  
  Fix the error and output your fix as a patch.
  '''
# ---
# name: TestBuildKnowledgeItemGenerationPrompt.test_includes_text_and_schema
  '''
  Given the following text, create a KnowledgeItem to store this information in memory.
  
  Text: Paris is the capital.
  
  The KnowledgeItem must conform to this schema:
  Fields:
    - raw: str
  
  Output ONLY a valid JSON object matching the schema fields. No explanation.
  '''
# ---
# name: TestBuildKnowledgeItemWithFeedbackPrompt.test_includes_feedback_and_ground_truth
  '''
  Evaluation result: Score: 0.0 (incorrect)
  Ground truth: Paris
  
  Based on this feedback, generate a knowledge item to write into memory.
  
  The knowledge item must be a JSON object matching this schema:
  Fields:
    - raw: str
  
  Respond with the JSON only.
  '''
# ---
# name: TestBuildKnowledgeItemWithFeedbackPrompt.test_includes_ground_truth_label
  '''
  Evaluation result: ok
  Ground truth: 42
  
  Based on this feedback, generate a knowledge item to write into memory.
  
  The knowledge item must be a JSON object matching this schema:
  schema
  
  Respond with the JSON only.
  '''
# ---
# name: TestBuildObservationGenerationPrompt.test_includes_text_and_schema
  '''
  Given the following text, create an Observation object to store this information in memory.
  
  Text: Paris is the capital.
  
  The Observation must conform to this schema:
  Fields:
    - raw: str
  
  Output ONLY a valid JSON object matching the schema fields. No explanation.
  '''
# ---
# name: TestBuildObservationWithFeedbackPrompt.test_includes_feedback_and_ground_truth
  '''
  Evaluation result: Score: 0.0 (incorrect)
  Ground truth: Paris
  
  Based on this feedback, generate an observation to write into memory.
  
  The observation must be a JSON object matching this schema:
  Fields:
    - raw: str
  
  Respond with the JSON only.
  '''
# ---
# name: TestBuildObservationWithFeedbackPrompt.test_includes_ground_truth_label
  '''
  Evaluation result: ok
  Ground truth: 42
  
  Based on this feedback, generate an observation to write into memory.
  
  The observation must be a JSON object matching this schema:
  schema
  
  Respond with the JSON only.
  '''
# ---
# name: TestBuildQueryGenerationPrompt.test_includes_question_and_schema
  '''
  Given the following question, generate a query to retrieve relevant memory.
  
  Question: What is the capital?
  
  The query must be a JSON object matching this schema:
  Fields:
    - raw: str
  
  Respond with the JSON only.
  '''
# ---
# name: TestBuildReflectionUserPrompt.test_handles_empty_optional_fields
  '''
  You are an expert Python programmer specializing in knowledge base system design.
  
  Your task: Given a Knowledge Base Program (Python code defining KnowledgeItem, Query, and KnowledgeBase classes), its evaluation score, and failed cases, diagnose the issues and fix them.
  
  <interface_spec>
  You are designing a Knowledge Base Program that implements three classes:
  
  1. **KnowledgeItem** (dataclass): Defines what information is captured as knowledge items when writing to the knowledge base.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
     - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
     - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
  
  2. **Query** (dataclass): Defines what parameters are used when reading from the knowledge base.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - Same JSON-compatible type restriction and field description support as KnowledgeItem
  
  3. **KnowledgeBase** (class): The core knowledge base system.
     - `__init__(self, toolkit)`: Receives a Toolkit with:
       - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
       - `toolkit.chroma`: chromadb ephemeral client
       - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
       - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
     - `write(self, item: KnowledgeItem) -> None`: Store information
     - `read(self, query: Query) -> str`: Retrieve relevant information as a string
  
  Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
  
  ## Runtime Constraints
  
  These limits are enforced during evaluation. Violating them results in score = 0.
  
  - **`read()` output limit**: `kb.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
  - **`write()` / `read()` timeout**: Each call must complete within **5 seconds**. Avoid expensive computation in these methods.
  - **`toolkit.llm_completion()` budget**: At most **50 LLM calls** per evaluation run. Use LLM calls sparingly in write/read; prefer deterministic retrieval (SQL, text matching) over LLM-based filtering.
  
  ## Instruction Constants (required)
  
  Four module-level string constants provide the natural-language instructions used in task agent prompts:
  
  - INSTRUCTION_KNOWLEDGE_ITEM: Instruction for knowledge item generation. Tells the task LLM what to extract and how to structure it. The KnowledgeItem schema is provided separately — no need to describe field names or types here.
  - INSTRUCTION_QUERY: Instruction for query generation. Tells the task LLM how to formulate retrieval queries. The Query schema is provided separately — no need to describe field names or types here.
  - INSTRUCTION_RESPONSE: Instruction for answer generation. Controls answer format, length, and style.
  - ALWAYS_ON_KNOWLEDGE: Persistent knowledge injected into every task agent prompt. Unlike INSTRUCTION_* (output format), this provides always-on context. Can be empty.
  
  INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, and INSTRUCTION_RESPONSE must not be empty. ALWAYS_ON_KNOWLEDGE can be empty.
  
  </interface_spec>
  
  <rules>
  1. Output your diagnosis first, then your changes as a patch using the format below.
  2. The code must define exactly three classes (KnowledgeItem, Query, KnowledgeBase) and four module-level string constants (INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, INSTRUCTION_RESPONSE, ALWAYS_ON_KNOWLEDGE).
  3. KnowledgeBase.__init__ must accept `toolkit`; write takes a KnowledgeItem; read takes a Query and returns str.
  4. `read()` must return at most 1000 characters — do not return all stored text.
  5. Keep it simple. Make minimal, targeted fixes.
  6. Update INSTRUCTION_* to steer task LLM output format. Update ALWAYS_ON_KNOWLEDGE with persistent knowledge the task agent should always have.
  7. Add clear comments explaining WHY each part of the code works the way it does — this helps future iterations understand and preserve your design decisions.
  </rules>
  
  <patch_format>
  Output your changes as a V4A patch. The patch is applied to the current program shown in <current_program>.
  
  Format:
  ```
  *** Begin Patch
  *** Update File: program.py
  @@ <optional context hint>
   context line (1-2 lines before change)
  -removed line
  +added line
   context line (1-2 lines after change)
  *** End Patch
  ```
  
  Rules:
  - Lines prefixed with `-` are removed, `+` are added, ` ` (space) are unchanged context.
  - Include 1-2 context lines before and after each change for anchoring.
  - Multiple hunks are allowed within one `*** Update File` block.
  
  Example — replacing a return value:
  ```
  *** Begin Patch
  *** Update File: program.py
  @@ return statement
   def read(self, query: Query) -> str:
  -    return "\n".join(self.store)
  +    return "\n".join(self.store[-5:])
  *** End Patch
  ```
  </patch_format>
  
  <current_program iteration="1">
  ```python
  x
  ```
  </current_program>
  
  <evaluation_score>0.500</evaluation_score>
  
  
  The following cases show poor performance on the validation set after memory has been written (using the same write process shown in the write examples above). Each case contains the full retrieval-and-answer conversation trajectory.
  
  <failed_cases>
  <case id="1">
  <question>q</question>
  <expected>a</expected>
  <model_generation>o</model_generation>
  <score>0.0</score>
  </case>
  
  </failed_cases>
  
  <task>
  1. Diagnose why these cases fail.
  2. Propose specific improvements to the Knowledge Base Program.
  3. Output your changes as a patch.
  </task>
  '''
# ---
# name: TestBuildReflectionUserPrompt.test_includes_all_cases
  '''
  You are an expert Python programmer specializing in knowledge base system design.
  
  Your task: Given a Knowledge Base Program (Python code defining KnowledgeItem, Query, and KnowledgeBase classes), its evaluation score, and failed cases, diagnose the issues and fix them.
  
  <interface_spec>
  You are designing a Knowledge Base Program that implements three classes:
  
  1. **KnowledgeItem** (dataclass): Defines what information is captured as knowledge items when writing to the knowledge base.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
     - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
     - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
  
  2. **Query** (dataclass): Defines what parameters are used when reading from the knowledge base.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - Same JSON-compatible type restriction and field description support as KnowledgeItem
  
  3. **KnowledgeBase** (class): The core knowledge base system.
     - `__init__(self, toolkit)`: Receives a Toolkit with:
       - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
       - `toolkit.chroma`: chromadb ephemeral client
       - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
       - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
     - `write(self, item: KnowledgeItem) -> None`: Store information
     - `read(self, query: Query) -> str`: Retrieve relevant information as a string
  
  Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
  
  ## Runtime Constraints
  
  These limits are enforced during evaluation. Violating them results in score = 0.
  
  - **`read()` output limit**: `kb.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
  - **`write()` / `read()` timeout**: Each call must complete within **5 seconds**. Avoid expensive computation in these methods.
  - **`toolkit.llm_completion()` budget**: At most **50 LLM calls** per evaluation run. Use LLM calls sparingly in write/read; prefer deterministic retrieval (SQL, text matching) over LLM-based filtering.
  
  ## Instruction Constants (required)
  
  Four module-level string constants provide the natural-language instructions used in task agent prompts:
  
  - INSTRUCTION_KNOWLEDGE_ITEM: Instruction for knowledge item generation. Tells the task LLM what to extract and how to structure it. The KnowledgeItem schema is provided separately — no need to describe field names or types here.
  - INSTRUCTION_QUERY: Instruction for query generation. Tells the task LLM how to formulate retrieval queries. The Query schema is provided separately — no need to describe field names or types here.
  - INSTRUCTION_RESPONSE: Instruction for answer generation. Controls answer format, length, and style.
  - ALWAYS_ON_KNOWLEDGE: Persistent knowledge injected into every task agent prompt. Unlike INSTRUCTION_* (output format), this provides always-on context. Can be empty.
  
  INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, and INSTRUCTION_RESPONSE must not be empty. ALWAYS_ON_KNOWLEDGE can be empty.
  
  </interface_spec>
  
  <rules>
  1. Output your diagnosis first, then your changes as a patch using the format below.
  2. The code must define exactly three classes (KnowledgeItem, Query, KnowledgeBase) and four module-level string constants (INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, INSTRUCTION_RESPONSE, ALWAYS_ON_KNOWLEDGE).
  3. KnowledgeBase.__init__ must accept `toolkit`; write takes a KnowledgeItem; read takes a Query and returns str.
  4. `read()` must return at most 1000 characters — do not return all stored text.
  5. Keep it simple. Make minimal, targeted fixes.
  6. Update INSTRUCTION_* to steer task LLM output format. Update ALWAYS_ON_KNOWLEDGE with persistent knowledge the task agent should always have.
  7. Add clear comments explaining WHY each part of the code works the way it does — this helps future iterations understand and preserve your design decisions.
  </rules>
  
  <patch_format>
  Output your changes as a V4A patch. The patch is applied to the current program shown in <current_program>.
  
  Format:
  ```
  *** Begin Patch
  *** Update File: program.py
  @@ <optional context hint>
   context line (1-2 lines before change)
  -removed line
  +added line
   context line (1-2 lines after change)
  *** End Patch
  ```
  
  Rules:
  - Lines prefixed with `-` are removed, `+` are added, ` ` (space) are unchanged context.
  - Include 1-2 context lines before and after each change for anchoring.
  - Multiple hunks are allowed within one `*** Update File` block.
  
  Example — replacing a return value:
  ```
  *** Begin Patch
  *** Update File: program.py
  @@ return statement
   def read(self, query: Query) -> str:
  -    return "\n".join(self.store)
  +    return "\n".join(self.store[-5:])
  *** End Patch
  ```
  </patch_format>
  
  <current_program iteration="1">
  ```python
  x
  ```
  </current_program>
  
  <evaluation_score>0.000</evaluation_score>
  
  
  The following cases show poor performance on the validation set after memory has been written (using the same write process shown in the write examples above). Each case contains the full retrieval-and-answer conversation trajectory.
  
  <failed_cases>
  <case id="1">
  <question>q0</question>
  <expected>a0</expected>
  <model_generation>wrong</model_generation>
  <score>0.0</score>
  </case>
  
  <case id="2">
  <question>q1</question>
  <expected>a1</expected>
  <model_generation>wrong</model_generation>
  <score>0.0</score>
  </case>
  
  </failed_cases>
  
  <task>
  1. Diagnose why these cases fail.
  2. Propose specific improvements to the Knowledge Base Program.
  3. Output your changes as a patch.
  </task>
  '''
# ---
# name: TestBuildReflectionUserPrompt.test_includes_code_and_score
  '''
  You are an expert Python programmer specializing in knowledge base system design.
  
  Your task: Given a Knowledge Base Program (Python code defining KnowledgeItem, Query, and KnowledgeBase classes), its evaluation score, and failed cases, diagnose the issues and fix them.
  
  <interface_spec>
  You are designing a Knowledge Base Program that implements three classes:
  
  1. **KnowledgeItem** (dataclass): Defines what information is captured as knowledge items when writing to the knowledge base.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
     - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
     - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
  
  2. **Query** (dataclass): Defines what parameters are used when reading from the knowledge base.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - Same JSON-compatible type restriction and field description support as KnowledgeItem
  
  3. **KnowledgeBase** (class): The core knowledge base system.
     - `__init__(self, toolkit)`: Receives a Toolkit with:
       - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
       - `toolkit.chroma`: chromadb ephemeral client
       - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
       - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
     - `write(self, item: KnowledgeItem) -> None`: Store information
     - `read(self, query: Query) -> str`: Retrieve relevant information as a string
  
  Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
  
  ## Runtime Constraints
  
  These limits are enforced during evaluation. Violating them results in score = 0.
  
  - **`read()` output limit**: `kb.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
  - **`write()` / `read()` timeout**: Each call must complete within **5 seconds**. Avoid expensive computation in these methods.
  - **`toolkit.llm_completion()` budget**: At most **50 LLM calls** per evaluation run. Use LLM calls sparingly in write/read; prefer deterministic retrieval (SQL, text matching) over LLM-based filtering.
  
  ## Instruction Constants (required)
  
  Four module-level string constants provide the natural-language instructions used in task agent prompts:
  
  - INSTRUCTION_KNOWLEDGE_ITEM: Instruction for knowledge item generation. Tells the task LLM what to extract and how to structure it. The KnowledgeItem schema is provided separately — no need to describe field names or types here.
  - INSTRUCTION_QUERY: Instruction for query generation. Tells the task LLM how to formulate retrieval queries. The Query schema is provided separately — no need to describe field names or types here.
  - INSTRUCTION_RESPONSE: Instruction for answer generation. Controls answer format, length, and style.
  - ALWAYS_ON_KNOWLEDGE: Persistent knowledge injected into every task agent prompt. Unlike INSTRUCTION_* (output format), this provides always-on context. Can be empty.
  
  INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, and INSTRUCTION_RESPONSE must not be empty. ALWAYS_ON_KNOWLEDGE can be empty.
  
  </interface_spec>
  
  <rules>
  1. Output your diagnosis first, then your changes as a patch using the format below.
  2. The code must define exactly three classes (KnowledgeItem, Query, KnowledgeBase) and four module-level string constants (INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, INSTRUCTION_RESPONSE, ALWAYS_ON_KNOWLEDGE).
  3. KnowledgeBase.__init__ must accept `toolkit`; write takes a KnowledgeItem; read takes a Query and returns str.
  4. `read()` must return at most 1000 characters — do not return all stored text.
  5. Keep it simple. Make minimal, targeted fixes.
  6. Update INSTRUCTION_* to steer task LLM output format. Update ALWAYS_ON_KNOWLEDGE with persistent knowledge the task agent should always have.
  7. Add clear comments explaining WHY each part of the code works the way it does — this helps future iterations understand and preserve your design decisions.
  </rules>
  
  <patch_format>
  Output your changes as a V4A patch. The patch is applied to the current program shown in <current_program>.
  
  Format:
  ```
  *** Begin Patch
  *** Update File: program.py
  @@ <optional context hint>
   context line (1-2 lines before change)
  -removed line
  +added line
   context line (1-2 lines after change)
  *** End Patch
  ```
  
  Rules:
  - Lines prefixed with `-` are removed, `+` are added, ` ` (space) are unchanged context.
  - Include 1-2 context lines before and after each change for anchoring.
  - Multiple hunks are allowed within one `*** Update File` block.
  
  Example — replacing a return value:
  ```
  *** Begin Patch
  *** Update File: program.py
  @@ return statement
   def read(self, query: Query) -> str:
  -    return "\n".join(self.store)
  +    return "\n".join(self.store[-5:])
  *** End Patch
  ```
  </patch_format>
  
  <current_program iteration="3">
  ```python
  class KnowledgeBase: pass
  ```
  </current_program>
  
  <evaluation_score>0.420</evaluation_score>
  
  
  The following cases show poor performance on the validation set after memory has been written (using the same write process shown in the write examples above). Each case contains the full retrieval-and-answer conversation trajectory.
  
  <failed_cases>
  
  </failed_cases>
  
  <task>
  1. Diagnose why these cases fail.
  2. Propose specific improvements to the Knowledge Base Program.
  3. Output your changes as a patch.
  </task>
  '''
# ---
# name: TestBuildReflectionUserPrompt.test_includes_failed_cases
  '''
  You are an expert Python programmer specializing in knowledge base system design.
  
  Your task: Given a Knowledge Base Program (Python code defining KnowledgeItem, Query, and KnowledgeBase classes), its evaluation score, and failed cases, diagnose the issues and fix them.
  
  <interface_spec>
  You are designing a Knowledge Base Program that implements three classes:
  
  1. **KnowledgeItem** (dataclass): Defines what information is captured as knowledge items when writing to the knowledge base.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
     - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
     - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
  
  2. **Query** (dataclass): Defines what parameters are used when reading from the knowledge base.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - Same JSON-compatible type restriction and field description support as KnowledgeItem
  
  3. **KnowledgeBase** (class): The core knowledge base system.
     - `__init__(self, toolkit)`: Receives a Toolkit with:
       - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
       - `toolkit.chroma`: chromadb ephemeral client
       - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
       - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
     - `write(self, item: KnowledgeItem) -> None`: Store information
     - `read(self, query: Query) -> str`: Retrieve relevant information as a string
  
  Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
  
  ## Runtime Constraints
  
  These limits are enforced during evaluation. Violating them results in score = 0.
  
  - **`read()` output limit**: `kb.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
  - **`write()` / `read()` timeout**: Each call must complete within **5 seconds**. Avoid expensive computation in these methods.
  - **`toolkit.llm_completion()` budget**: At most **50 LLM calls** per evaluation run. Use LLM calls sparingly in write/read; prefer deterministic retrieval (SQL, text matching) over LLM-based filtering.
  
  ## Instruction Constants (required)
  
  Four module-level string constants provide the natural-language instructions used in task agent prompts:
  
  - INSTRUCTION_KNOWLEDGE_ITEM: Instruction for knowledge item generation. Tells the task LLM what to extract and how to structure it. The KnowledgeItem schema is provided separately — no need to describe field names or types here.
  - INSTRUCTION_QUERY: Instruction for query generation. Tells the task LLM how to formulate retrieval queries. The Query schema is provided separately — no need to describe field names or types here.
  - INSTRUCTION_RESPONSE: Instruction for answer generation. Controls answer format, length, and style.
  - ALWAYS_ON_KNOWLEDGE: Persistent knowledge injected into every task agent prompt. Unlike INSTRUCTION_* (output format), this provides always-on context. Can be empty.
  
  INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, and INSTRUCTION_RESPONSE must not be empty. ALWAYS_ON_KNOWLEDGE can be empty.
  
  </interface_spec>
  
  <rules>
  1. Output your diagnosis first, then your changes as a patch using the format below.
  2. The code must define exactly three classes (KnowledgeItem, Query, KnowledgeBase) and four module-level string constants (INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, INSTRUCTION_RESPONSE, ALWAYS_ON_KNOWLEDGE).
  3. KnowledgeBase.__init__ must accept `toolkit`; write takes a KnowledgeItem; read takes a Query and returns str.
  4. `read()` must return at most 1000 characters — do not return all stored text.
  5. Keep it simple. Make minimal, targeted fixes.
  6. Update INSTRUCTION_* to steer task LLM output format. Update ALWAYS_ON_KNOWLEDGE with persistent knowledge the task agent should always have.
  7. Add clear comments explaining WHY each part of the code works the way it does — this helps future iterations understand and preserve your design decisions.
  </rules>
  
  <patch_format>
  Output your changes as a V4A patch. The patch is applied to the current program shown in <current_program>.
  
  Format:
  ```
  *** Begin Patch
  *** Update File: program.py
  @@ <optional context hint>
   context line (1-2 lines before change)
  -removed line
  +added line
   context line (1-2 lines after change)
  *** End Patch
  ```
  
  Rules:
  - Lines prefixed with `-` are removed, `+` are added, ` ` (space) are unchanged context.
  - Include 1-2 context lines before and after each change for anchoring.
  - Multiple hunks are allowed within one `*** Update File` block.
  
  Example — replacing a return value:
  ```
  *** Begin Patch
  *** Update File: program.py
  @@ return statement
   def read(self, query: Query) -> str:
  -    return "\n".join(self.store)
  +    return "\n".join(self.store[-5:])
  *** End Patch
  ```
  </patch_format>
  
  <current_program iteration="1">
  ```python
  code here
  ```
  </current_program>
  
  <evaluation_score>0.000</evaluation_score>
  
  
  The following cases show poor performance on the validation set after memory has been written (using the same write process shown in the write examples above). Each case contains the full retrieval-and-answer conversation trajectory.
  
  <failed_cases>
  <case id="1">
  <question>What is X?</question>
  <expected>42</expected>
  <model_generation>unknown</model_generation>
  <score>0.0</score>
  <conversation>
    [user]: What is X?
    [assistant]: unknown
  </conversation>
  <memory_logs>
    - Stored: fact about X
    - Query: What is X
  </memory_logs>
  </case>
  
  </failed_cases>
  
  <task>
  1. Diagnose why these cases fail.
  2. Propose specific improvements to the Knowledge Base Program.
  3. Output your changes as a patch.
  </task>
  '''
# ---
# name: TestBuildReflectionUserPrompt.test_includes_success_cases
  '''
  You are an expert Python programmer specializing in knowledge base system design.
  
  Your task: Given a Knowledge Base Program (Python code defining KnowledgeItem, Query, and KnowledgeBase classes), its evaluation score, and failed cases, diagnose the issues and fix them.
  
  <interface_spec>
  You are designing a Knowledge Base Program that implements three classes:
  
  1. **KnowledgeItem** (dataclass): Defines what information is captured as knowledge items when writing to the knowledge base.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
     - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
     - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
  
  2. **Query** (dataclass): Defines what parameters are used when reading from the knowledge base.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - Same JSON-compatible type restriction and field description support as KnowledgeItem
  
  3. **KnowledgeBase** (class): The core knowledge base system.
     - `__init__(self, toolkit)`: Receives a Toolkit with:
       - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
       - `toolkit.chroma`: chromadb ephemeral client
       - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
       - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
     - `write(self, item: KnowledgeItem) -> None`: Store information
     - `read(self, query: Query) -> str`: Retrieve relevant information as a string
  
  Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
  
  ## Runtime Constraints
  
  These limits are enforced during evaluation. Violating them results in score = 0.
  
  - **`read()` output limit**: `kb.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
  - **`write()` / `read()` timeout**: Each call must complete within **5 seconds**. Avoid expensive computation in these methods.
  - **`toolkit.llm_completion()` budget**: At most **50 LLM calls** per evaluation run. Use LLM calls sparingly in write/read; prefer deterministic retrieval (SQL, text matching) over LLM-based filtering.
  
  ## Instruction Constants (required)
  
  Four module-level string constants provide the natural-language instructions used in task agent prompts:
  
  - INSTRUCTION_KNOWLEDGE_ITEM: Instruction for knowledge item generation. Tells the task LLM what to extract and how to structure it. The KnowledgeItem schema is provided separately — no need to describe field names or types here.
  - INSTRUCTION_QUERY: Instruction for query generation. Tells the task LLM how to formulate retrieval queries. The Query schema is provided separately — no need to describe field names or types here.
  - INSTRUCTION_RESPONSE: Instruction for answer generation. Controls answer format, length, and style.
  - ALWAYS_ON_KNOWLEDGE: Persistent knowledge injected into every task agent prompt. Unlike INSTRUCTION_* (output format), this provides always-on context. Can be empty.
  
  INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, and INSTRUCTION_RESPONSE must not be empty. ALWAYS_ON_KNOWLEDGE can be empty.
  
  </interface_spec>
  
  <rules>
  1. Output your diagnosis first, then your changes as a patch using the format below.
  2. The code must define exactly three classes (KnowledgeItem, Query, KnowledgeBase) and four module-level string constants (INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, INSTRUCTION_RESPONSE, ALWAYS_ON_KNOWLEDGE).
  3. KnowledgeBase.__init__ must accept `toolkit`; write takes a KnowledgeItem; read takes a Query and returns str.
  4. `read()` must return at most 1000 characters — do not return all stored text.
  5. Keep it simple. Make minimal, targeted fixes.
  6. Update INSTRUCTION_* to steer task LLM output format. Update ALWAYS_ON_KNOWLEDGE with persistent knowledge the task agent should always have.
  7. Add clear comments explaining WHY each part of the code works the way it does — this helps future iterations understand and preserve your design decisions.
  </rules>
  
  <patch_format>
  Output your changes as a V4A patch. The patch is applied to the current program shown in <current_program>.
  
  Format:
  ```
  *** Begin Patch
  *** Update File: program.py
  @@ <optional context hint>
   context line (1-2 lines before change)
  -removed line
  +added line
   context line (1-2 lines after change)
  *** End Patch
  ```
  
  Rules:
  - Lines prefixed with `-` are removed, `+` are added, ` ` (space) are unchanged context.
  - Include 1-2 context lines before and after each change for anchoring.
  - Multiple hunks are allowed within one `*** Update File` block.
  
  Example — replacing a return value:
  ```
  *** Begin Patch
  *** Update File: program.py
  @@ return statement
   def read(self, query: Query) -> str:
  -    return "\n".join(self.store)
  +    return "\n".join(self.store[-5:])
  *** End Patch
  ```
  </patch_format>
  
  <current_program iteration="1">
  ```python
  class KnowledgeBase: pass
  ```
  </current_program>
  
  <evaluation_score>0.500</evaluation_score>
  
  The following case(s) show successful performance — the current program handled these correctly. Preserve the behavior that makes these work.
  
  <success_cases>
  <case id="1">
  <question>q_success</question>
  <expected>correct_answer</expected>
  <model_generation>correct_answer</model_generation>
  <score>1.0</score>
  <conversation>
    [user]: query prompt
    [assistant]: correct_answer
  </conversation>
  </case>
  </success_cases>
  
  
  The following cases show poor performance on the validation set after memory has been written (using the same write process shown in the write examples above). Each case contains the full retrieval-and-answer conversation trajectory.
  
  <failed_cases>
  <case id="1">
  <question>q_fail</question>
  <expected>a_fail</expected>
  <model_generation>wrong</model_generation>
  <score>0.0</score>
  </case>
  
  </failed_cases>
  
  <task>
  1. Diagnose why these cases fail.
  2. Propose specific improvements to the Knowledge Base Program.
  3. Output your changes as a patch.
  </task>
  '''
# ---
# name: TestBuildReflectionUserPrompt.test_includes_train_examples
  '''
  You are an expert Python programmer specializing in knowledge base system design.
  
  Your task: Given a Knowledge Base Program (Python code defining KnowledgeItem, Query, and KnowledgeBase classes), its evaluation score, and failed cases, diagnose the issues and fix them.
  
  <interface_spec>
  You are designing a Knowledge Base Program that implements three classes:
  
  1. **KnowledgeItem** (dataclass): Defines what information is captured as knowledge items when writing to the knowledge base.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
     - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
     - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
  
  2. **Query** (dataclass): Defines what parameters are used when reading from the knowledge base.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - Same JSON-compatible type restriction and field description support as KnowledgeItem
  
  3. **KnowledgeBase** (class): The core knowledge base system.
     - `__init__(self, toolkit)`: Receives a Toolkit with:
       - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
       - `toolkit.chroma`: chromadb ephemeral client
       - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
       - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
     - `write(self, item: KnowledgeItem) -> None`: Store information
     - `read(self, query: Query) -> str`: Retrieve relevant information as a string
  
  Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
  
  ## Runtime Constraints
  
  These limits are enforced during evaluation. Violating them results in score = 0.
  
  - **`read()` output limit**: `kb.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
  - **`write()` / `read()` timeout**: Each call must complete within **5 seconds**. Avoid expensive computation in these methods.
  - **`toolkit.llm_completion()` budget**: At most **50 LLM calls** per evaluation run. Use LLM calls sparingly in write/read; prefer deterministic retrieval (SQL, text matching) over LLM-based filtering.
  
  ## Instruction Constants (required)
  
  Four module-level string constants provide the natural-language instructions used in task agent prompts:
  
  - INSTRUCTION_KNOWLEDGE_ITEM: Instruction for knowledge item generation. Tells the task LLM what to extract and how to structure it. The KnowledgeItem schema is provided separately — no need to describe field names or types here.
  - INSTRUCTION_QUERY: Instruction for query generation. Tells the task LLM how to formulate retrieval queries. The Query schema is provided separately — no need to describe field names or types here.
  - INSTRUCTION_RESPONSE: Instruction for answer generation. Controls answer format, length, and style.
  - ALWAYS_ON_KNOWLEDGE: Persistent knowledge injected into every task agent prompt. Unlike INSTRUCTION_* (output format), this provides always-on context. Can be empty.
  
  INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, and INSTRUCTION_RESPONSE must not be empty. ALWAYS_ON_KNOWLEDGE can be empty.
  
  </interface_spec>
  
  <rules>
  1. Output your diagnosis first, then your changes as a patch using the format below.
  2. The code must define exactly three classes (KnowledgeItem, Query, KnowledgeBase) and four module-level string constants (INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, INSTRUCTION_RESPONSE, ALWAYS_ON_KNOWLEDGE).
  3. KnowledgeBase.__init__ must accept `toolkit`; write takes a KnowledgeItem; read takes a Query and returns str.
  4. `read()` must return at most 1000 characters — do not return all stored text.
  5. Keep it simple. Make minimal, targeted fixes.
  6. Update INSTRUCTION_* to steer task LLM output format. Update ALWAYS_ON_KNOWLEDGE with persistent knowledge the task agent should always have.
  7. Add clear comments explaining WHY each part of the code works the way it does — this helps future iterations understand and preserve your design decisions.
  </rules>
  
  <patch_format>
  Output your changes as a V4A patch. The patch is applied to the current program shown in <current_program>.
  
  Format:
  ```
  *** Begin Patch
  *** Update File: program.py
  @@ <optional context hint>
   context line (1-2 lines before change)
  -removed line
  +added line
   context line (1-2 lines after change)
  *** End Patch
  ```
  
  Rules:
  - Lines prefixed with `-` are removed, `+` are added, ` ` (space) are unchanged context.
  - Include 1-2 context lines before and after each change for anchoring.
  - Multiple hunks are allowed within one `*** Update File` block.
  
  Example — replacing a return value:
  ```
  *** Begin Patch
  *** Update File: program.py
  @@ return statement
   def read(self, query: Query) -> str:
  -    return "\n".join(self.store)
  +    return "\n".join(self.store[-5:])
  *** End Patch
  ```
  </patch_format>
  
  <current_program iteration="1">
  ```python
  class KnowledgeBase: pass
  ```
  </current_program>
  
  <evaluation_score>0.100</evaluation_score>
  
  The following are example write trajectories from the evaluation. They show how the external LLM generates knowledge items from raw document text and how `memory.write()` is called. Read these to understand the format of the source documents.
  
  <write_examples>
  <conversation id="1">
  [user]: Given the following text...
  Text: Hello world
  Schema: {"raw": "..."}
  [assistant]: {"raw": "Hello world"}
  </conversation>
  </write_examples>
  
  
  The following cases show poor performance on the validation set after memory has been written (using the same write process shown in the write examples above). Each case contains the full retrieval-and-answer conversation trajectory.
  
  <failed_cases>
  
  </failed_cases>
  
  <task>
  1. Diagnose why these cases fail.
  2. Propose specific improvements to the Knowledge Base Program.
  3. Output your changes as a patch.
  </task>
  '''
# ---
# name: TestBuildReflectionUserPrompt.test_no_success_cases_omits_section
  '''
  You are an expert Python programmer specializing in knowledge base system design.
  
  Your task: Given a Knowledge Base Program (Python code defining KnowledgeItem, Query, and KnowledgeBase classes), its evaluation score, and failed cases, diagnose the issues and fix them.
  
  <interface_spec>
  You are designing a Knowledge Base Program that implements three classes:
  
  1. **KnowledgeItem** (dataclass): Defines what information is captured as knowledge items when writing to the knowledge base.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
     - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
     - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
  
  2. **Query** (dataclass): Defines what parameters are used when reading from the knowledge base.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - Same JSON-compatible type restriction and field description support as KnowledgeItem
  
  3. **KnowledgeBase** (class): The core knowledge base system.
     - `__init__(self, toolkit)`: Receives a Toolkit with:
       - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
       - `toolkit.chroma`: chromadb ephemeral client
       - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
       - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
     - `write(self, item: KnowledgeItem) -> None`: Store information
     - `read(self, query: Query) -> str`: Retrieve relevant information as a string
  
  Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
  
  ## Runtime Constraints
  
  These limits are enforced during evaluation. Violating them results in score = 0.
  
  - **`read()` output limit**: `kb.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
  - **`write()` / `read()` timeout**: Each call must complete within **5 seconds**. Avoid expensive computation in these methods.
  - **`toolkit.llm_completion()` budget**: At most **50 LLM calls** per evaluation run. Use LLM calls sparingly in write/read; prefer deterministic retrieval (SQL, text matching) over LLM-based filtering.
  
  ## Instruction Constants (required)
  
  Four module-level string constants provide the natural-language instructions used in task agent prompts:
  
  - INSTRUCTION_KNOWLEDGE_ITEM: Instruction for knowledge item generation. Tells the task LLM what to extract and how to structure it. The KnowledgeItem schema is provided separately — no need to describe field names or types here.
  - INSTRUCTION_QUERY: Instruction for query generation. Tells the task LLM how to formulate retrieval queries. The Query schema is provided separately — no need to describe field names or types here.
  - INSTRUCTION_RESPONSE: Instruction for answer generation. Controls answer format, length, and style.
  - ALWAYS_ON_KNOWLEDGE: Persistent knowledge injected into every task agent prompt. Unlike INSTRUCTION_* (output format), this provides always-on context. Can be empty.
  
  INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, and INSTRUCTION_RESPONSE must not be empty. ALWAYS_ON_KNOWLEDGE can be empty.
  
  </interface_spec>
  
  <rules>
  1. Output your diagnosis first, then your changes as a patch using the format below.
  2. The code must define exactly three classes (KnowledgeItem, Query, KnowledgeBase) and four module-level string constants (INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, INSTRUCTION_RESPONSE, ALWAYS_ON_KNOWLEDGE).
  3. KnowledgeBase.__init__ must accept `toolkit`; write takes a KnowledgeItem; read takes a Query and returns str.
  4. `read()` must return at most 1000 characters — do not return all stored text.
  5. Keep it simple. Make minimal, targeted fixes.
  6. Update INSTRUCTION_* to steer task LLM output format. Update ALWAYS_ON_KNOWLEDGE with persistent knowledge the task agent should always have.
  7. Add clear comments explaining WHY each part of the code works the way it does — this helps future iterations understand and preserve your design decisions.
  </rules>
  
  <patch_format>
  Output your changes as a V4A patch. The patch is applied to the current program shown in <current_program>.
  
  Format:
  ```
  *** Begin Patch
  *** Update File: program.py
  @@ <optional context hint>
   context line (1-2 lines before change)
  -removed line
  +added line
   context line (1-2 lines after change)
  *** End Patch
  ```
  
  Rules:
  - Lines prefixed with `-` are removed, `+` are added, ` ` (space) are unchanged context.
  - Include 1-2 context lines before and after each change for anchoring.
  - Multiple hunks are allowed within one `*** Update File` block.
  
  Example — replacing a return value:
  ```
  *** Begin Patch
  *** Update File: program.py
  @@ return statement
   def read(self, query: Query) -> str:
  -    return "\n".join(self.store)
  +    return "\n".join(self.store[-5:])
  *** End Patch
  ```
  </patch_format>
  
  <current_program iteration="1">
  ```python
  x
  ```
  </current_program>
  
  <evaluation_score>0.000</evaluation_score>
  
  
  The following cases show poor performance on the validation set after memory has been written (using the same write process shown in the write examples above). Each case contains the full retrieval-and-answer conversation trajectory.
  
  <failed_cases>
  
  </failed_cases>
  
  <task>
  1. Diagnose why these cases fail.
  2. Propose specific improvements to the Knowledge Base Program.
  3. Output your changes as a patch.
  </task>
  '''
# ---
# name: TestBuildReflectionUserPrompt.test_success_cases_limited_by_config
  '''
  You are an expert Python programmer specializing in knowledge base system design.
  
  Your task: Given a Knowledge Base Program (Python code defining KnowledgeItem, Query, and KnowledgeBase classes), its evaluation score, and failed cases, diagnose the issues and fix them.
  
  <interface_spec>
  You are designing a Knowledge Base Program that implements three classes:
  
  1. **KnowledgeItem** (dataclass): Defines what information is captured as knowledge items when writing to the knowledge base.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
     - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
     - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
  
  2. **Query** (dataclass): Defines what parameters are used when reading from the knowledge base.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - Same JSON-compatible type restriction and field description support as KnowledgeItem
  
  3. **KnowledgeBase** (class): The core knowledge base system.
     - `__init__(self, toolkit)`: Receives a Toolkit with:
       - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
       - `toolkit.chroma`: chromadb ephemeral client
       - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
       - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
     - `write(self, item: KnowledgeItem) -> None`: Store information
     - `read(self, query: Query) -> str`: Retrieve relevant information as a string
  
  Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
  
  ## Runtime Constraints
  
  These limits are enforced during evaluation. Violating them results in score = 0.
  
  - **`read()` output limit**: `kb.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
  - **`write()` / `read()` timeout**: Each call must complete within **5 seconds**. Avoid expensive computation in these methods.
  - **`toolkit.llm_completion()` budget**: At most **50 LLM calls** per evaluation run. Use LLM calls sparingly in write/read; prefer deterministic retrieval (SQL, text matching) over LLM-based filtering.
  
  ## Instruction Constants (required)
  
  Four module-level string constants provide the natural-language instructions used in task agent prompts:
  
  - INSTRUCTION_KNOWLEDGE_ITEM: Instruction for knowledge item generation. Tells the task LLM what to extract and how to structure it. The KnowledgeItem schema is provided separately — no need to describe field names or types here.
  - INSTRUCTION_QUERY: Instruction for query generation. Tells the task LLM how to formulate retrieval queries. The Query schema is provided separately — no need to describe field names or types here.
  - INSTRUCTION_RESPONSE: Instruction for answer generation. Controls answer format, length, and style.
  - ALWAYS_ON_KNOWLEDGE: Persistent knowledge injected into every task agent prompt. Unlike INSTRUCTION_* (output format), this provides always-on context. Can be empty.
  
  INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, and INSTRUCTION_RESPONSE must not be empty. ALWAYS_ON_KNOWLEDGE can be empty.
  
  </interface_spec>
  
  <rules>
  1. Output your diagnosis first, then your changes as a patch using the format below.
  2. The code must define exactly three classes (KnowledgeItem, Query, KnowledgeBase) and four module-level string constants (INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, INSTRUCTION_RESPONSE, ALWAYS_ON_KNOWLEDGE).
  3. KnowledgeBase.__init__ must accept `toolkit`; write takes a KnowledgeItem; read takes a Query and returns str.
  4. `read()` must return at most 1000 characters — do not return all stored text.
  5. Keep it simple. Make minimal, targeted fixes.
  6. Update INSTRUCTION_* to steer task LLM output format. Update ALWAYS_ON_KNOWLEDGE with persistent knowledge the task agent should always have.
  7. Add clear comments explaining WHY each part of the code works the way it does — this helps future iterations understand and preserve your design decisions.
  </rules>
  
  <patch_format>
  Output your changes as a V4A patch. The patch is applied to the current program shown in <current_program>.
  
  Format:
  ```
  *** Begin Patch
  *** Update File: program.py
  @@ <optional context hint>
   context line (1-2 lines before change)
  -removed line
  +added line
   context line (1-2 lines after change)
  *** End Patch
  ```
  
  Rules:
  - Lines prefixed with `-` are removed, `+` are added, ` ` (space) are unchanged context.
  - Include 1-2 context lines before and after each change for anchoring.
  - Multiple hunks are allowed within one `*** Update File` block.
  
  Example — replacing a return value:
  ```
  *** Begin Patch
  *** Update File: program.py
  @@ return statement
   def read(self, query: Query) -> str:
  -    return "\n".join(self.store)
  +    return "\n".join(self.store[-5:])
  *** End Patch
  ```
  </patch_format>
  
  <current_program iteration="1">
  ```python
  x
  ```
  </current_program>
  
  <evaluation_score>0.800</evaluation_score>
  
  The following case(s) show successful performance — the current program handled these correctly. Preserve the behavior that makes these work.
  
  <success_cases>
  <case id="1">
  <question>sq0</question>
  <expected>sa0</expected>
  <model_generation>sa0</model_generation>
  <score>1.0</score>
  </case>
  </success_cases>
  
  
  The following cases show poor performance on the validation set after memory has been written (using the same write process shown in the write examples above). Each case contains the full retrieval-and-answer conversation trajectory.
  
  <failed_cases>
  
  </failed_cases>
  
  <task>
  1. Diagnose why these cases fail.
  2. Propose specific improvements to the Knowledge Base Program.
  3. Output your changes as a patch.
  </task>
  '''
# ---
# name: TestBuildRetrievedMemoryPrompt.test_always_on_knowledge_empty_unchanged
  '''
  <retrieved_memory>
  some retrieved text
  </retrieved_memory>
  
  answer this
  '''
# ---
# name: TestBuildRetrievedMemoryPrompt.test_always_on_knowledge_injected
  '''
  <retrieved_memory>
  Be systematic.
  
  some retrieved text
  </retrieved_memory>
  
  answer this
  '''
# ---
# name: TestBuildRetrievedMemoryPrompt.test_empty_retrieved
  '''
  <retrieved_memory>
  
  </retrieved_memory>
  
  Based on the above memory and the original question, provide your answer.
  '''
# ---
# name: TestBuildRetrievedMemoryPrompt.test_includes_retrieved_in_tags
  '''
  <retrieved_memory>
  fact1
  fact2
  </retrieved_memory>
  
  Based on the above memory and the original question, provide your answer.
  '''
# ---
# name: TestReflectionPromptConfig.test_default_config
  '''
  You are an expert Python programmer specializing in knowledge base system design.
  
  Your task: Given a Knowledge Base Program (Python code defining KnowledgeItem, Query, and KnowledgeBase classes), its evaluation score, and failed cases, diagnose the issues and fix them.
  
  <interface_spec>
  You are designing a Knowledge Base Program that implements three classes:
  
  1. **KnowledgeItem** (dataclass): Defines what information is captured as knowledge items when writing to the knowledge base.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
     - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
     - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
  
  2. **Query** (dataclass): Defines what parameters are used when reading from the knowledge base.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - Same JSON-compatible type restriction and field description support as KnowledgeItem
  
  3. **KnowledgeBase** (class): The core knowledge base system.
     - `__init__(self, toolkit)`: Receives a Toolkit with:
       - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
       - `toolkit.chroma`: chromadb ephemeral client
       - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
       - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
     - `write(self, item: KnowledgeItem) -> None`: Store information
     - `read(self, query: Query) -> str`: Retrieve relevant information as a string
  
  Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
  
  ## Runtime Constraints
  
  These limits are enforced during evaluation. Violating them results in score = 0.
  
  - **`read()` output limit**: `kb.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
  - **`write()` / `read()` timeout**: Each call must complete within **5 seconds**. Avoid expensive computation in these methods.
  - **`toolkit.llm_completion()` budget**: At most **50 LLM calls** per evaluation run. Use LLM calls sparingly in write/read; prefer deterministic retrieval (SQL, text matching) over LLM-based filtering.
  
  ## Instruction Constants (required)
  
  Four module-level string constants provide the natural-language instructions used in task agent prompts:
  
  - INSTRUCTION_KNOWLEDGE_ITEM: Instruction for knowledge item generation. Tells the task LLM what to extract and how to structure it. The KnowledgeItem schema is provided separately — no need to describe field names or types here.
  - INSTRUCTION_QUERY: Instruction for query generation. Tells the task LLM how to formulate retrieval queries. The Query schema is provided separately — no need to describe field names or types here.
  - INSTRUCTION_RESPONSE: Instruction for answer generation. Controls answer format, length, and style.
  - ALWAYS_ON_KNOWLEDGE: Persistent knowledge injected into every task agent prompt. Unlike INSTRUCTION_* (output format), this provides always-on context. Can be empty.
  
  INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, and INSTRUCTION_RESPONSE must not be empty. ALWAYS_ON_KNOWLEDGE can be empty.
  
  </interface_spec>
  
  <rules>
  1. Output your diagnosis first, then your changes as a patch using the format below.
  2. The code must define exactly three classes (KnowledgeItem, Query, KnowledgeBase) and four module-level string constants (INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, INSTRUCTION_RESPONSE, ALWAYS_ON_KNOWLEDGE).
  3. KnowledgeBase.__init__ must accept `toolkit`; write takes a KnowledgeItem; read takes a Query and returns str.
  4. `read()` must return at most 1000 characters — do not return all stored text.
  5. Keep it simple. Make minimal, targeted fixes.
  6. Update INSTRUCTION_* to steer task LLM output format. Update ALWAYS_ON_KNOWLEDGE with persistent knowledge the task agent should always have.
  7. Add clear comments explaining WHY each part of the code works the way it does — this helps future iterations understand and preserve your design decisions.
  </rules>
  
  <patch_format>
  Output your changes as a V4A patch. The patch is applied to the current program shown in <current_program>.
  
  Format:
  ```
  *** Begin Patch
  *** Update File: program.py
  @@ <optional context hint>
   context line (1-2 lines before change)
  -removed line
  +added line
   context line (1-2 lines after change)
  *** End Patch
  ```
  
  Rules:
  - Lines prefixed with `-` are removed, `+` are added, ` ` (space) are unchanged context.
  - Include 1-2 context lines before and after each change for anchoring.
  - Multiple hunks are allowed within one `*** Update File` block.
  
  Example — replacing a return value:
  ```
  *** Begin Patch
  *** Update File: program.py
  @@ return statement
   def read(self, query: Query) -> str:
  -    return "\n".join(self.store)
  +    return "\n".join(self.store[-5:])
  *** End Patch
  ```
  </patch_format>
  
  <current_program iteration="1">
  ```python
  x
  ```
  </current_program>
  
  <evaluation_score>0.000</evaluation_score>
  
  
  The following cases show poor performance on the validation set after memory has been written (using the same write process shown in the write examples above). Each case contains the full retrieval-and-answer conversation trajectory.
  
  <failed_cases>
  <case id="1">
  <question>q</question>
  <expected>a</expected>
  <model_generation>o</model_generation>
  <score>0.0</score>
  </case>
  
  </failed_cases>
  
  <task>
  1. Diagnose why these cases fail.
  2. Propose specific improvements to the Knowledge Base Program.
  3. Output your changes as a patch.
  </task>
  '''
# ---
# name: TestReflectionPromptConfig.test_max_failed_cases
  '''
  You are an expert Python programmer specializing in knowledge base system design.
  
  Your task: Given a Knowledge Base Program (Python code defining KnowledgeItem, Query, and KnowledgeBase classes), its evaluation score, and failed cases, diagnose the issues and fix them.
  
  <interface_spec>
  You are designing a Knowledge Base Program that implements three classes:
  
  1. **KnowledgeItem** (dataclass): Defines what information is captured as knowledge items when writing to the knowledge base.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
     - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
     - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
  
  2. **Query** (dataclass): Defines what parameters are used when reading from the knowledge base.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - Same JSON-compatible type restriction and field description support as KnowledgeItem
  
  3. **KnowledgeBase** (class): The core knowledge base system.
     - `__init__(self, toolkit)`: Receives a Toolkit with:
       - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
       - `toolkit.chroma`: chromadb ephemeral client
       - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
       - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
     - `write(self, item: KnowledgeItem) -> None`: Store information
     - `read(self, query: Query) -> str`: Retrieve relevant information as a string
  
  Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
  
  ## Runtime Constraints
  
  These limits are enforced during evaluation. Violating them results in score = 0.
  
  - **`read()` output limit**: `kb.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
  - **`write()` / `read()` timeout**: Each call must complete within **5 seconds**. Avoid expensive computation in these methods.
  - **`toolkit.llm_completion()` budget**: At most **50 LLM calls** per evaluation run. Use LLM calls sparingly in write/read; prefer deterministic retrieval (SQL, text matching) over LLM-based filtering.
  
  ## Instruction Constants (required)
  
  Four module-level string constants provide the natural-language instructions used in task agent prompts:
  
  - INSTRUCTION_KNOWLEDGE_ITEM: Instruction for knowledge item generation. Tells the task LLM what to extract and how to structure it. The KnowledgeItem schema is provided separately — no need to describe field names or types here.
  - INSTRUCTION_QUERY: Instruction for query generation. Tells the task LLM how to formulate retrieval queries. The Query schema is provided separately — no need to describe field names or types here.
  - INSTRUCTION_RESPONSE: Instruction for answer generation. Controls answer format, length, and style.
  - ALWAYS_ON_KNOWLEDGE: Persistent knowledge injected into every task agent prompt. Unlike INSTRUCTION_* (output format), this provides always-on context. Can be empty.
  
  INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, and INSTRUCTION_RESPONSE must not be empty. ALWAYS_ON_KNOWLEDGE can be empty.
  
  </interface_spec>
  
  <rules>
  1. Output your diagnosis first, then your changes as a patch using the format below.
  2. The code must define exactly three classes (KnowledgeItem, Query, KnowledgeBase) and four module-level string constants (INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, INSTRUCTION_RESPONSE, ALWAYS_ON_KNOWLEDGE).
  3. KnowledgeBase.__init__ must accept `toolkit`; write takes a KnowledgeItem; read takes a Query and returns str.
  4. `read()` must return at most 1000 characters — do not return all stored text.
  5. Keep it simple. Make minimal, targeted fixes.
  6. Update INSTRUCTION_* to steer task LLM output format. Update ALWAYS_ON_KNOWLEDGE with persistent knowledge the task agent should always have.
  7. Add clear comments explaining WHY each part of the code works the way it does — this helps future iterations understand and preserve your design decisions.
  </rules>
  
  <patch_format>
  Output your changes as a V4A patch. The patch is applied to the current program shown in <current_program>.
  
  Format:
  ```
  *** Begin Patch
  *** Update File: program.py
  @@ <optional context hint>
   context line (1-2 lines before change)
  -removed line
  +added line
   context line (1-2 lines after change)
  *** End Patch
  ```
  
  Rules:
  - Lines prefixed with `-` are removed, `+` are added, ` ` (space) are unchanged context.
  - Include 1-2 context lines before and after each change for anchoring.
  - Multiple hunks are allowed within one `*** Update File` block.
  
  Example — replacing a return value:
  ```
  *** Begin Patch
  *** Update File: program.py
  @@ return statement
   def read(self, query: Query) -> str:
  -    return "\n".join(self.store)
  +    return "\n".join(self.store[-5:])
  *** End Patch
  ```
  </patch_format>
  
  <current_program iteration="1">
  ```python
  x
  ```
  </current_program>
  
  <evaluation_score>0.000</evaluation_score>
  
  
  The following cases show poor performance on the validation set after memory has been written (using the same write process shown in the write examples above). Each case contains the full retrieval-and-answer conversation trajectory.
  
  <failed_cases>
  <case id="1">
  <question>q0</question>
  <expected>a0</expected>
  <model_generation>wrong</model_generation>
  <score>0.0</score>
  </case>
  
  <case id="2">
  <question>q1</question>
  <expected>a1</expected>
  <model_generation>wrong</model_generation>
  <score>0.0</score>
  </case>
  
  </failed_cases>
  
  <task>
  1. Diagnose why these cases fail.
  2. Propose specific improvements to the Knowledge Base Program.
  3. Output your changes as a patch.
  </task>
  '''
# ---
# name: TestReflectionPromptConfig.test_max_memory_log_chars_zero_excludes
  '''
  You are an expert Python programmer specializing in knowledge base system design.
  
  Your task: Given a Knowledge Base Program (Python code defining KnowledgeItem, Query, and KnowledgeBase classes), its evaluation score, and failed cases, diagnose the issues and fix them.
  
  <interface_spec>
  You are designing a Knowledge Base Program that implements three classes:
  
  1. **KnowledgeItem** (dataclass): Defines what information is captured as knowledge items when writing to the knowledge base.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
     - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
     - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
  
  2. **Query** (dataclass): Defines what parameters are used when reading from the knowledge base.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - Same JSON-compatible type restriction and field description support as KnowledgeItem
  
  3. **KnowledgeBase** (class): The core knowledge base system.
     - `__init__(self, toolkit)`: Receives a Toolkit with:
       - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
       - `toolkit.chroma`: chromadb ephemeral client
       - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
       - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
     - `write(self, item: KnowledgeItem) -> None`: Store information
     - `read(self, query: Query) -> str`: Retrieve relevant information as a string
  
  Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
  
  ## Runtime Constraints
  
  These limits are enforced during evaluation. Violating them results in score = 0.
  
  - **`read()` output limit**: `kb.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
  - **`write()` / `read()` timeout**: Each call must complete within **5 seconds**. Avoid expensive computation in these methods.
  - **`toolkit.llm_completion()` budget**: At most **50 LLM calls** per evaluation run. Use LLM calls sparingly in write/read; prefer deterministic retrieval (SQL, text matching) over LLM-based filtering.
  
  ## Instruction Constants (required)
  
  Four module-level string constants provide the natural-language instructions used in task agent prompts:
  
  - INSTRUCTION_KNOWLEDGE_ITEM: Instruction for knowledge item generation. Tells the task LLM what to extract and how to structure it. The KnowledgeItem schema is provided separately — no need to describe field names or types here.
  - INSTRUCTION_QUERY: Instruction for query generation. Tells the task LLM how to formulate retrieval queries. The Query schema is provided separately — no need to describe field names or types here.
  - INSTRUCTION_RESPONSE: Instruction for answer generation. Controls answer format, length, and style.
  - ALWAYS_ON_KNOWLEDGE: Persistent knowledge injected into every task agent prompt. Unlike INSTRUCTION_* (output format), this provides always-on context. Can be empty.
  
  INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, and INSTRUCTION_RESPONSE must not be empty. ALWAYS_ON_KNOWLEDGE can be empty.
  
  </interface_spec>
  
  <rules>
  1. Output your diagnosis first, then your changes as a patch using the format below.
  2. The code must define exactly three classes (KnowledgeItem, Query, KnowledgeBase) and four module-level string constants (INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, INSTRUCTION_RESPONSE, ALWAYS_ON_KNOWLEDGE).
  3. KnowledgeBase.__init__ must accept `toolkit`; write takes a KnowledgeItem; read takes a Query and returns str.
  4. `read()` must return at most 1000 characters — do not return all stored text.
  5. Keep it simple. Make minimal, targeted fixes.
  6. Update INSTRUCTION_* to steer task LLM output format. Update ALWAYS_ON_KNOWLEDGE with persistent knowledge the task agent should always have.
  7. Add clear comments explaining WHY each part of the code works the way it does — this helps future iterations understand and preserve your design decisions.
  </rules>
  
  <patch_format>
  Output your changes as a V4A patch. The patch is applied to the current program shown in <current_program>.
  
  Format:
  ```
  *** Begin Patch
  *** Update File: program.py
  @@ <optional context hint>
   context line (1-2 lines before change)
  -removed line
  +added line
   context line (1-2 lines after change)
  *** End Patch
  ```
  
  Rules:
  - Lines prefixed with `-` are removed, `+` are added, ` ` (space) are unchanged context.
  - Include 1-2 context lines before and after each change for anchoring.
  - Multiple hunks are allowed within one `*** Update File` block.
  
  Example — replacing a return value:
  ```
  *** Begin Patch
  *** Update File: program.py
  @@ return statement
   def read(self, query: Query) -> str:
  -    return "\n".join(self.store)
  +    return "\n".join(self.store[-5:])
  *** End Patch
  ```
  </patch_format>
  
  <current_program iteration="1">
  ```python
  x
  ```
  </current_program>
  
  <evaluation_score>0.000</evaluation_score>
  
  
  The following cases show poor performance on the validation set after memory has been written (using the same write process shown in the write examples above). Each case contains the full retrieval-and-answer conversation trajectory.
  
  <failed_cases>
  <case id="1">
  <question>q</question>
  <expected>a</expected>
  <model_generation>o</model_generation>
  <score>0.0</score>
  </case>
  
  </failed_cases>
  
  <task>
  1. Diagnose why these cases fail.
  2. Propose specific improvements to the Knowledge Base Program.
  3. Output your changes as a patch.
  </task>
  '''
# ---
# name: TestReflectionPromptConfig.test_max_success_cases
  '''
  You are an expert Python programmer specializing in knowledge base system design.
  
  Your task: Given a Knowledge Base Program (Python code defining KnowledgeItem, Query, and KnowledgeBase classes), its evaluation score, and failed cases, diagnose the issues and fix them.
  
  <interface_spec>
  You are designing a Knowledge Base Program that implements three classes:
  
  1. **KnowledgeItem** (dataclass): Defines what information is captured as knowledge items when writing to the knowledge base.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
     - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
     - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
  
  2. **Query** (dataclass): Defines what parameters are used when reading from the knowledge base.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - Same JSON-compatible type restriction and field description support as KnowledgeItem
  
  3. **KnowledgeBase** (class): The core knowledge base system.
     - `__init__(self, toolkit)`: Receives a Toolkit with:
       - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
       - `toolkit.chroma`: chromadb ephemeral client
       - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
       - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
     - `write(self, item: KnowledgeItem) -> None`: Store information
     - `read(self, query: Query) -> str`: Retrieve relevant information as a string
  
  Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
  
  ## Runtime Constraints
  
  These limits are enforced during evaluation. Violating them results in score = 0.
  
  - **`read()` output limit**: `kb.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
  - **`write()` / `read()` timeout**: Each call must complete within **5 seconds**. Avoid expensive computation in these methods.
  - **`toolkit.llm_completion()` budget**: At most **50 LLM calls** per evaluation run. Use LLM calls sparingly in write/read; prefer deterministic retrieval (SQL, text matching) over LLM-based filtering.
  
  ## Instruction Constants (required)
  
  Four module-level string constants provide the natural-language instructions used in task agent prompts:
  
  - INSTRUCTION_KNOWLEDGE_ITEM: Instruction for knowledge item generation. Tells the task LLM what to extract and how to structure it. The KnowledgeItem schema is provided separately — no need to describe field names or types here.
  - INSTRUCTION_QUERY: Instruction for query generation. Tells the task LLM how to formulate retrieval queries. The Query schema is provided separately — no need to describe field names or types here.
  - INSTRUCTION_RESPONSE: Instruction for answer generation. Controls answer format, length, and style.
  - ALWAYS_ON_KNOWLEDGE: Persistent knowledge injected into every task agent prompt. Unlike INSTRUCTION_* (output format), this provides always-on context. Can be empty.
  
  INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, and INSTRUCTION_RESPONSE must not be empty. ALWAYS_ON_KNOWLEDGE can be empty.
  
  </interface_spec>
  
  <rules>
  1. Output your diagnosis first, then your changes as a patch using the format below.
  2. The code must define exactly three classes (KnowledgeItem, Query, KnowledgeBase) and four module-level string constants (INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, INSTRUCTION_RESPONSE, ALWAYS_ON_KNOWLEDGE).
  3. KnowledgeBase.__init__ must accept `toolkit`; write takes a KnowledgeItem; read takes a Query and returns str.
  4. `read()` must return at most 1000 characters — do not return all stored text.
  5. Keep it simple. Make minimal, targeted fixes.
  6. Update INSTRUCTION_* to steer task LLM output format. Update ALWAYS_ON_KNOWLEDGE with persistent knowledge the task agent should always have.
  7. Add clear comments explaining WHY each part of the code works the way it does — this helps future iterations understand and preserve your design decisions.
  </rules>
  
  <patch_format>
  Output your changes as a V4A patch. The patch is applied to the current program shown in <current_program>.
  
  Format:
  ```
  *** Begin Patch
  *** Update File: program.py
  @@ <optional context hint>
   context line (1-2 lines before change)
  -removed line
  +added line
   context line (1-2 lines after change)
  *** End Patch
  ```
  
  Rules:
  - Lines prefixed with `-` are removed, `+` are added, ` ` (space) are unchanged context.
  - Include 1-2 context lines before and after each change for anchoring.
  - Multiple hunks are allowed within one `*** Update File` block.
  
  Example — replacing a return value:
  ```
  *** Begin Patch
  *** Update File: program.py
  @@ return statement
   def read(self, query: Query) -> str:
  -    return "\n".join(self.store)
  +    return "\n".join(self.store[-5:])
  *** End Patch
  ```
  </patch_format>
  
  <current_program iteration="1">
  ```python
  x
  ```
  </current_program>
  
  <evaluation_score>0.500</evaluation_score>
  
  The following case(s) show successful performance — the current program handled these correctly. Preserve the behavior that makes these work.
  
  <success_cases>
  <case id="1">
  <question>sq0</question>
  <expected>sa0</expected>
  <model_generation>sa0</model_generation>
  <score>1.0</score>
  </case>
  <case id="2">
  <question>sq1</question>
  <expected>sa1</expected>
  <model_generation>sa1</model_generation>
  <score>1.0</score>
  </case>
  </success_cases>
  
  
  The following cases show poor performance on the validation set after memory has been written (using the same write process shown in the write examples above). Each case contains the full retrieval-and-answer conversation trajectory.
  
  <failed_cases>
  
  </failed_cases>
  
  <task>
  1. Diagnose why these cases fail.
  2. Propose specific improvements to the Knowledge Base Program.
  3. Output your changes as a patch.
  </task>
  '''
# ---
# name: TestReflectionPromptConfig.test_max_train_examples
  '''
  You are an expert Python programmer specializing in knowledge base system design.
  
  Your task: Given a Knowledge Base Program (Python code defining KnowledgeItem, Query, and KnowledgeBase classes), its evaluation score, and failed cases, diagnose the issues and fix them.
  
  <interface_spec>
  You are designing a Knowledge Base Program that implements three classes:
  
  1. **KnowledgeItem** (dataclass): Defines what information is captured as knowledge items when writing to the knowledge base.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
     - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
     - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
  
  2. **Query** (dataclass): Defines what parameters are used when reading from the knowledge base.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - Same JSON-compatible type restriction and field description support as KnowledgeItem
  
  3. **KnowledgeBase** (class): The core knowledge base system.
     - `__init__(self, toolkit)`: Receives a Toolkit with:
       - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
       - `toolkit.chroma`: chromadb ephemeral client
       - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
       - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
     - `write(self, item: KnowledgeItem) -> None`: Store information
     - `read(self, query: Query) -> str`: Retrieve relevant information as a string
  
  Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
  
  ## Runtime Constraints
  
  These limits are enforced during evaluation. Violating them results in score = 0.
  
  - **`read()` output limit**: `kb.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
  - **`write()` / `read()` timeout**: Each call must complete within **5 seconds**. Avoid expensive computation in these methods.
  - **`toolkit.llm_completion()` budget**: At most **50 LLM calls** per evaluation run. Use LLM calls sparingly in write/read; prefer deterministic retrieval (SQL, text matching) over LLM-based filtering.
  
  ## Instruction Constants (required)
  
  Four module-level string constants provide the natural-language instructions used in task agent prompts:
  
  - INSTRUCTION_KNOWLEDGE_ITEM: Instruction for knowledge item generation. Tells the task LLM what to extract and how to structure it. The KnowledgeItem schema is provided separately — no need to describe field names or types here.
  - INSTRUCTION_QUERY: Instruction for query generation. Tells the task LLM how to formulate retrieval queries. The Query schema is provided separately — no need to describe field names or types here.
  - INSTRUCTION_RESPONSE: Instruction for answer generation. Controls answer format, length, and style.
  - ALWAYS_ON_KNOWLEDGE: Persistent knowledge injected into every task agent prompt. Unlike INSTRUCTION_* (output format), this provides always-on context. Can be empty.
  
  INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, and INSTRUCTION_RESPONSE must not be empty. ALWAYS_ON_KNOWLEDGE can be empty.
  
  </interface_spec>
  
  <rules>
  1. Output your diagnosis first, then your changes as a patch using the format below.
  2. The code must define exactly three classes (KnowledgeItem, Query, KnowledgeBase) and four module-level string constants (INSTRUCTION_KNOWLEDGE_ITEM, INSTRUCTION_QUERY, INSTRUCTION_RESPONSE, ALWAYS_ON_KNOWLEDGE).
  3. KnowledgeBase.__init__ must accept `toolkit`; write takes a KnowledgeItem; read takes a Query and returns str.
  4. `read()` must return at most 1000 characters — do not return all stored text.
  5. Keep it simple. Make minimal, targeted fixes.
  6. Update INSTRUCTION_* to steer task LLM output format. Update ALWAYS_ON_KNOWLEDGE with persistent knowledge the task agent should always have.
  7. Add clear comments explaining WHY each part of the code works the way it does — this helps future iterations understand and preserve your design decisions.
  </rules>
  
  <patch_format>
  Output your changes as a V4A patch. The patch is applied to the current program shown in <current_program>.
  
  Format:
  ```
  *** Begin Patch
  *** Update File: program.py
  @@ <optional context hint>
   context line (1-2 lines before change)
  -removed line
  +added line
   context line (1-2 lines after change)
  *** End Patch
  ```
  
  Rules:
  - Lines prefixed with `-` are removed, `+` are added, ` ` (space) are unchanged context.
  - Include 1-2 context lines before and after each change for anchoring.
  - Multiple hunks are allowed within one `*** Update File` block.
  
  Example — replacing a return value:
  ```
  *** Begin Patch
  *** Update File: program.py
  @@ return statement
   def read(self, query: Query) -> str:
  -    return "\n".join(self.store)
  +    return "\n".join(self.store[-5:])
  *** End Patch
  ```
  </patch_format>
  
  <current_program iteration="1">
  ```python
  x
  ```
  </current_program>
  
  <evaluation_score>0.000</evaluation_score>
  
  The following are example write trajectories from the evaluation. They show how the external LLM generates knowledge items from raw document text and how `memory.write()` is called. Read these to understand the format of the source documents.
  
  <write_examples>
  <conversation id="1">
  [user]: example 0
  </conversation>
  <conversation id="2">
  [user]: example 1
  </conversation>
  </write_examples>
  
  
  The following cases show poor performance on the validation set after memory has been written (using the same write process shown in the write examples above). Each case contains the full retrieval-and-answer conversation trajectory.
  
  <failed_cases>
  
  </failed_cases>
  
  <task>
  1. Diagnose why these cases fail.
  2. Propose specific improvements to the Knowledge Base Program.
  3. Output your changes as a patch.
  </task>
  '''
# ---
